--- a/ETL_Mini_Project_Starter_Code.ipynb
+++ b/ETL_Mini_Project_Starter_Code.ipynb
@@ -2841,121 +2841,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>contact_info</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>{\"contact_id\": 4661, \"name\": \"Cecilia Velasco\"...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>{\"contact_id\": 3765, \"name\": \"Mariana Ellis\", ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>{\"contact_id\": 4187, \"name\": \"Sofie Woods\", \"e...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>{\"contact_id\": 4941, \"name\": \"Jeanette Iannott...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                    \n",
-       "0                                       contact_info\n",
-       "1  {\"contact_id\": 4661, \"name\": \"Cecilia Velasco\"...\n",
-       "2  {\"contact_id\": 3765, \"name\": \"Mariana Ellis\", ...\n",
-       "3  {\"contact_id\": 4187, \"name\": \"Sofie Woods\", \"e...\n",
-       "4  {\"contact_id\": 4941, \"name\": \"Jeanette Iannott..."
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "contact_info_df_copy = contact_info_df.copy()\n",
-    "contact_info_df_copy.head()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'contact_info_df_copy' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_20752\\1698961955.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Extract the four-digit contact ID number.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mcontacts_info_df_copy\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'contact_id'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcontact_info_df_copy\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'contact_info'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mextract\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mr'(\\d{4})'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mcontact_info_df_copy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'contact_info_df_copy' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Extract the four-digit contact ID number.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1001 entries, 0 to 1000\n",
-      "Data columns (total 1 columns):\n",
-      " #   Column  Non-Null Count  Dtype \n",
-      "---  ------  --------------  ----- \n",
-      " 0           1001 non-null   object\n",
-      "dtypes: object(1)\n",
-      "memory usage: 7.9+ KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Check the datatypes.\n",
-    "contact_info_df_copy.info()"
+    "# Check the datatypes.\n"
    ]
   },
   {
@@ -2964,9 +2870,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert the \"contact_id\" column to an int64 data type.\n",
-    "contact_info_df_copy['contact_id'] = pd.to_numeric(contact_info_df_copy['contact_id'])\n",
-    "contact_info_df_copy.info()"
+    "# Convert the \"contact_id\" column to an int64 data type.\n"
    ]
   },
   {
